# hippocampus-os

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  schema.md
src/hippocampus/: __init__.py  client.py  compiler.py  config.py  exceptions.py  graph.py  inhibitor.py  interceptor.py  router.py
tests/: __init__.py  test_client.py  test_compiler.py  test_config.py  test_exceptions.py  test_graph.py  test_inhibitor.py  test_interceptor.py  test_router.py
